<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_dialog"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="35dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/ten_dp"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="#ffffff"
                android:orientation="vertical">

                <View
                    android:layout_width="150dp"
                    android:layout_height="4dp"
                    android:layout_gravity="center"
                    android:background="@color/disable_color" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/ten_dp"
                    android:background="@color/disable_color" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/twenty_five_dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/cancel_pickup"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black"
                    android:textSize="@dimen/eighteen_sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/please_provide_valid_reason"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black"
                    android:textSize="@dimen/fourteen_sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/twenty_five_dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/upload"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black"
                    android:textSize="@dimen/eighteen_sp" />


                <LinearLayout
                    android:id="@+id/ll_image_upload"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200dp"
                    android:layout_marginTop="@dimen/twenty_five_dp"
                    android:background="@color/light_gray"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_upload_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center"
                        android:text="@string/upload_image"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fifteen_dp" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_image_upload"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sixteen_sp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/choose_reason"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sixteen_sp" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/white_rounded_corner_thin_border">

                    <Spinner
                        android:id="@+id/spinner_cancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawSelectorOnTop="true"
                        android:entries="@array/reject_reason"
                        android:nestedScrollingEnabled="true"
                        android:padding="@dimen/five_dp"
                        android:textSize="@dimen/twelve_dp"
                        tools:listitem="5" />

                </RelativeLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/twenty_dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/reason"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sixteen_sp" />

                <EditText
                    android:id="@+id/edt_reason_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="@dimen/ten_dp"
                    android:background="#F0F0F0"
                    android:gravity="start"
                    android:hint="Write here..."
                    android:padding="@dimen/ten_dp" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/twenty_dp"
                    android:layout_marginBottom="@dimen/ten_dp"
                    >

                    <TextView
                        android:id="@+id/txt_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:background="@color/k_red"
                        android:fontFamily="@font/poppins_medium"
                        android:paddingLeft="@dimen/twenty_dp"
                        android:paddingTop="@dimen/ten_dp"
                        android:paddingRight="@dimen/twenty_dp"
                        android:paddingBottom="@dimen/ten_dp"
                        android:text="@string/back"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sixteen_sp" />

                    <TextView
                        android:id="@+id/txt_btn_cancel_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="@dimen/twenty_dp"
                        android:layout_toRightOf="@+id/txt_back"
                        android:background="@color/k_green"
                        android:fontFamily="@font/poppins_medium"
                        android:paddingTop="@dimen/ten_dp"
                        android:paddingBottom="@dimen/ten_dp"
                        android:text="@string/cancel_order"
                        android:textAlignment="center"
                        android:textColor="@color/white"

                        android:textSize="@dimen/sixteen_sp" />


                </RelativeLayout>


            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>