<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_dialog"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="35dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="#ffffff"
            android:orientation="vertical">

            <View
                android:layout_width="150dp"
                android:layout_height="4dp"
                android:layout_gravity="center"
                android:background="@color/disable_color" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/ten_dp"
                android:background="@color/disable_color" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_five_dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/order_id"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:textSize="@dimen/fifteen_sp" />

            <TextView
                android:id="@+id/tv_order_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:textSize="@dimen/fifteen_sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fifteen_dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginRight="@dimen/fifteen_dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/name"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/fifteen_sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/fifteen_dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/contact_number"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/fifteen_sp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten_dp">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginRight="@dimen/fifteen_dp"
                    android:layout_toLeftOf="@+id/txt_contact_number"
                    android:fontFamily="@font/poppins_regular"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/fifteen_sp" />

                <TextView
                    android:id="@+id/txt_contact_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/poppins_regular"
                    android:textAlignment="viewStart"
                    android:layout_marginRight="@dimen/fifteen_dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/fifteen_sp" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sixteen_sp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/pickup_form"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:textSize="@dimen/eighteen_sp" />

            <TextView
                android:id="@+id/tv_pickupfrom_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="In publishing and graphic design, Lorem ipsum is a place."
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="@dimen/fourteen_sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/delivery_to"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:textSize="@dimen/sixteen_sp" />

            <TextView
                android:id="@+id/tv_delivery_to_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="In publishing and graphic design, Lorem ipsum is a place."
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="@dimen/fourteen_sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_dp">

                <TextView
                    android:id="@+id/txt_cancel_accepted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:background="@color/k_red"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingLeft="@dimen/twenty_dp"
                    android:paddingTop="@dimen/ten_dp"
                    android:paddingRight="@dimen/twenty_dp"
                    android:paddingBottom="@dimen/ten_dp"
                    android:text="@string/cancel"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sixteen_sp" />

                <TextView
                    android:id="@+id/txt_btn_delivered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="@dimen/twenty_dp"
                    android:layout_toRightOf="@+id/txt_cancel_accepted"
                    android:background="@color/k_green"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingTop="@dimen/ten_dp"
                    android:paddingBottom="@dimen/ten_dp"
                    android:text="@string/delivered"
                    android:textAlignment="center"
                    android:textColor="@color/white"

                    android:textSize="@dimen/sixteen_sp" />


            </RelativeLayout>


        </LinearLayout>
    </LinearLayout>
</layout>